Edits for colab

--- a/3/Notebooks/Docking.ipynb
+++ b/3/Notebooks/Docking.ipynb
@@ -2,6 +2,38 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "e30943d8-2b03-4fc5-83d8-40a378b3acdc",
+   "metadata": {},
+   "source": [
+    "## Setting up the Google Colab\n",
+    "\n",
+    "In order to prepare the Google Colab, please run the two cells below. After the second cell has run, restart the session."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6642ba0-4189-4356-acc6-7828368a8002",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/wutobias/practicals-2023\n",
+    "!cp -r practicals-2023/3/Notebooks/* ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7953558-f702-4742-b162-e770b9e6bad8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install rdkit pandas scikit-learn numpy matplotlib nglview\n",
+    "!apt-get install pymol openbabel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "26433d48-1279-4dba-9785-7e81ce5d923f",
    "metadata": {},
    "source": [
@@ -120,7 +152,9 @@
     "## Re-dock the crystal structure\n",
     "\n",
     "Next, we want to re-dock the ligand from the crystal structure. This was already done for you and the results can be visualized below (run the cell first).\n",
-    "The docked and the experimentally resolved ligand do not overlap for the post with the best score. Change the the pose index `POSE_IDX` until you find a docked pose that matches nicely with the experimentally resolved structure. \n",
+    "The docked and the experimentally resolved ligand do not overlap for the post with the best score. Change the the pose index `POSE_IDX` until you find a docked pose that matches nicely with the experimentally resolved structure.\n",
+    "\n",
+    "**Note**: If nothing will be displayed, we will be doing this excercise together.\n",
     "\n",
     "1.) Describe how the correctly and incorrectly docked poses compare with the crystal structure of the ligand.\n",
     "\n",
@@ -136,6 +170,9 @@
    "source": [
     "import nglview as nv\n",
     "POSE_IDX = 0\n",
+    "\n",
+    "from google.colab import output\n",
+    "output.enable_custom_widget_manager()\n",
     "\n",
     "view = nv.NGLWidget()\n",
     "view.add_structure(\n",
@@ -344,11 +381,11 @@
     "from sklearn import metrics\n",
     "y_true = list()\n",
     "y_pred = list()\n",
-    "for row_idx, row in df[df.pIC50 < 4].iterrows():\n",
+    "for row_idx, row in molecules[molecules.pIC50 < 4].iterrows():\n",
     "    if row[\"score-0\"] != None:\n",
     "        y_true.append(row[\"active\"])\n",
     "        y_pred.append(-row[\"score-0\"])\n",
-    "for row_idx, row in df[df.active == 0].iterrows():\n",
+    "for row_idx, row in molecules[molecules.active == 0].iterrows():\n",
     "    if row[\"score-0\"] != None:\n",
     "        y_true.append(row[\"active\"])\n",
     "        y_pred.append(-row[\"score-0\"])\n",
