--- a/3/Notebooks/Docking.ipynb
+++ b/3/Notebooks/Docking.ipynb
@@ -171,8 +171,8 @@
     "import nglview as nv\n",
     "POSE_IDX = 0\n",
     "\n",
-    "from google.colab import output\n",
-    "output.enable_custom_widget_manager()\n",
+    "#from google.colab import output\n",
+    "#output.enable_custom_widget_manager()\n",
     "\n",
     "view = nv.NGLWidget()\n",
     "view.add_structure(\n",
@@ -181,8 +181,8 @@
     "    nv.FileStructure(\"ligand_dock.pdbqt\"))\n",
     "view._remote_call('setSelection', target='compList', args=[f\"/{POSE_IDX}\"], \n",
     "               kwargs=dict(component_index=1))\n",
-    "view.add_structure(\n",
-    "    nv.FileStructure(\"3ovv_prot.pdbqt\"))\n",
+    "#view.add_structure(\n",
+    "#    nv.FileStructure(\"3ovv_prot.pdbqt\"))\n",
     "view"
    ]
   },
@@ -209,11 +209,9 @@
    "source": [
     "## Visualize docked ligands\n",
     "\n",
-    "Next, we will visualize some of the docked ligands and analyze their interactions with the target protein. For that purpose, download the file `docked_pdb.zip` and unpack it. Upload the pdb files to the PLIP server (https://plip-tool.biotec.tu-dresden.de/plip-web/plip/index) to analyse and visualize the interactions of the docked complexes.\n",
+    "Next, we will visualize some of the docked ligands and analyze their interactions with the target protein. For that purpose, download the file `docked_pdb.zip` from the colab and unpack it. You can upload a pdb file to the PLIP server (https://plip-tool.biotec.tu-dresden.de/plip-web/plip/index) to analyse and visualize the interactions of the docked complexes.\n",
     "\n",
-    "1.) Identify hydrogen bonds and hydrophobic interactions.\n",
-    "\n",
-    "2.) Below is a list of the ligands sorted by docking score. What are the differences between a high and a low scoring ligand."
+    "1.) Below is a list of the ligands sorted by docking score. What are the differences between a high and a low scoring ligand regarding their interactions? Identify hydrogen bonds and hydrophobic interactions."
    ]
   },
   {
@@ -413,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
